syntax = "proto3";
package ankr;

service AnkrIndexer{
  rpc GetTransactionHistory (AnkrTxHisRequest) returns (TxHistoryList);
  rpc GetAssetBalance (AnkrAssetRequest) returns (HotAssetList);
}

enum Blockchain {
  BLOCKCHAIN_UNDEFINED = 0;
  ETH = 1;
  ARBITRUM = 2;
  BASE = 3;
  LINEA = 4;
  OPTIMISM = 5;
  ETH_SEPOLIA = 6;
}

// number | "latest" | "earliest"
message BlockReference {
  oneof kind {
    uint64 number = 1;
    string latest = 2;      // 值必须是 "latest"
    string earliest = 3;    // 值必须是 "earliest"
  }
}

// ankr tx history
message AnkrTxHisRequest {
  string uuid = 1;                 // 客户端UUID
  BlockReference from_timestamp = 2;
  BlockReference to_timestamp = 3;
  repeated Blockchain blockchain = 4;
  repeated string address = 5;
  string page_token = 6;
}

message TransactionHistoryEntry {
  string tx_hash = 1;
  string block_number = 2;
  string blockchain = 3;           
  string timestamp = 4;
  string from = 5;
  string to = 6;
  string value = 7;
  string gas_price = 8;
  string gas_used = 9;
}

message TxHistoryList {
  repeated TransactionHistoryEntry txs = 1;
  string next_page_token = 2;
}


message HotAsset {
  string blockchain = 1;
  string address = 2;
  string name = 3;
  string symbol = 4;
  string decimals = 5;
  string token_id = 6;
  string thumbnail = 7;
  string collection = 8;
  string assets_type = 9;
  string contract_address = 10;
  string balance = 11;
  string price = 12;
}

message HotAssetList {
  repeated HotAsset assets = 1;
}

message AnkrAssetRequest {
  string uuid = 1;                 // 客户端UUID
  repeated Blockchain blockchain = 2;
  repeated string address = 3;
  bool only_whitelisted = 4;
  string page_token = 6;
}